Bank Management System

--- a/bank-management-system/src/index.css
+++ b/bank-management-system/src/index.css
@@ -1,13 +1,146 @@
+/* *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input {
+  position: absolute;
+  margin: .1em;
+  width: 20vw;
+  height: 5vh;
+  padding: .2em .1em;
+  /* padding-block: 0.7rem; */
+  /* text-indent: 0.8rem; */
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+.image-wrapper {
+  margin-top: 1rem;
+  display: flex;
+  position: relative;
+}
+
+.image {
+  width: 80vw;
+}
+
+.image-text {
+  position: absolute;
+  bottom: 5%;
+  left: 0;
+  right: 6.8rem;
+  top: 8rem;
+}
+
+.login-btn {
+  position: absolute;
+  ;
+  transform: translate(-60%, -85%);
+  background-color: rgb(155, 203, 203);
+  /* border:none; */
+  color: black;
+  border-radius: .3em;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+}
+
+.btnn{
+  top: 54%;
+  left: 52%;
+  width: 7rem;
+  height: 1.3rem;
+  line-height: 1.2rem;
+}
+
+.login-btn:hover {
+  color:azure;
+}
+
+.btn_1 {
+  top: 48.6%;
+  left: 22%;
+  transform: translate(-50%, -50%);
+  width: 6.5rem;
+  height: 1.3rem;
+  line-height: 1.1rem;
+}
+.btn1{
+  top: 54%;
+  left: 54%;
+  width: 6.5rem;
+  height: 1.3rem;
+  line-height: 1.1rem;
+}
+.btn_2 {
+  top: 58.5%;
+  left: 24%;
+  
+}
+.btn_3 {
+  top: 58.5%;
+  left: 52%;
+  
+}
+.btn_31 {
+  top: 35%;
+  left: 44%;
+  width: 12rem;
+  height: 1.6rem;
+}
+.btn_32 {
+  top: 58.5%;
+  left: 54%;
+  width: 6.5rem;
+  height: 1.3rem;
+  line-height: 1.2rem;
+}
+.btn_4 {
+  top: 50%;
+  left: 52%;
+  width: 7rem;
+  height: 1.3rem;
+  line-height: 1.2rem;
+}
+.btn_5 {
+  top: 54%;
+  left: 24%;
+  width: 6.6rem;
+  height: 1.3rem;
+  line-height: 1.2rem;
+}
+.btn_6 {
+  top: 46%;
+  left: 52%;
+  width: 7rem;
+  height: 1.2rem;
+  line-height: 1.2rem;
+}
+/* //57 50*/
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+}
+
